add view and backend to add subject